# nursereports

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  design.md  pyproject.toml  requirements.txt  rxconfig.py
.qwen/: settings.json
assets/: HospitaList2025.xlsx  fireworks.js  stylesheet.css
memory/: MEMORY.md  feedback_rx_el_components.md
nursereports/: nursereports.py
nursereports/auth/: auth.py
nursereports/client/components/: __init__.py  badge.py  button.py  c2a.py  card.py  confetti.py  custom.py  dicts.py  footer.py  icon.py  (+10 more)
nursereports/components/: c2a.py  cities_by_state.py  custom.py  decorators.py  footer.py  lists.py  navbar.py  page.py  progress_bar.py  report_progress.py  sidebar.py
nursereports/events/: auth.py  feedback.py  rate_limit.py
nursereports/middleware/: middleware.py
nursereports/pages/: api_auth.py  api_deauth.py  auth.py  dashboard.py  deauth.py  forbidden.py  index.py  onboard.py  report.py  report_assign.py  report_comp.py  report_complete.py  report_pay.py  report_staffing.py  report_summary.py  report_summary_assign.py  report_summary_comp.py  report_summary_staffing.py  report_unit.py  search.py  sso.py  sso_params.py  template.py
nursereports/state/: base.py
nursereports/states/: __init__.py  auth.py  auth_state.py  base.py  base_state.py  constants_types.py  cookie.py  dashboard_state.py  hospital_state.py  login_state.py  navbar.py  navbar_state.py  onboard.py  onboard_state.py  overview_state.py  page.py  page_state.py  report.py  report_state.py  search.py  search_state.py  summary.py  user_state.py
(+94 files in other folders)
